# gringos_shower_monitor

./: Cargo.toml  Makefile.toml  README.md  app.css  index.html
pkg/: package.js  package_bg.wasm  processed_app.css
shower_backend/: .env  Cargo.toml
shower_backend/migrations/2019-07-04-182012_initial/: down.sql  up.sql
shower_backend/src/: main.rs  model.rs  schema.rs
shower_frontend/: Cargo.toml  Makefile.toml  app.css  index.html  tailwind.config.js
shower_frontend/src/: chartjs.rs  lib.rs  seed_scatter_plot.rs
shower_frontend/src/chartsjs/: chart_js_2.8.0.js
src/: lib.rs
