[package]
name = "shower_backend"
version = "0.1.0"
authors = ["Tiberio D A R Ferreira <tiberiusferreira@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysfs_gpio = "0.5"

diesel = { version = "1.0.0", features = ["sqlite"] }
dotenv = "0.9.0"
chrono = "*"
log = "*"
flexi_logger = "*"
rocket = "*"
rocket_contrib = "*"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "*"
rocket_cors = "*"
