[package]
name = "shower_frontend"
version = "0.1.0"
authors = ["Your Name <tiberiusferreira@gmail.com"]
edition = "2018"


[lib]
crate-type = ["cdylib"]


[dependencies]
seed = "^0.4"
js-sys = "*"
wasm-bindgen = {version = "^0.2.42", features = ["serde-serialize"]}

web-sys =  {version = "0.3.22", features = ["SvgElement", "SvgsvgElement", "SvgPoint", "SvgMatrix", "SvgGraphicsElement", "HtmlCanvasElement", "CanvasRenderingContext2d"]}

# For serialization, eg sending requests to a server. Otherwise, not required.
serde = { version = "^1.0.85", features = ['derive'] }
futures = "^0.1.26"


# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4"}



[profile.release]
lto = true
opt-level = 's'

panic = "abort"


